Fix TcSwitch on Chrome & improve TcSelect's visibility

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -71,6 +71,8 @@ $tc-border-width--input: 1px;
 $tc-border-width--tabs: 2px;
 
 // ### Box shadows
+$tc-box-shadow--select-above: 6px -6px 0 0 rgba($tc-color--black, 0.15);
+$tc-box-shadow--select-below: 6px 6px 0 0 rgba($tc-color--black, 0.15);
 $tc-box-shadow--switch: 0 2px 3px 0 rgba($tc-color--black, 0.3);
 $tc-box-shadow--dialog: 0 0 50px 0 rgba($tc-color--black, 0.15);
 $tc-box-shadow--overflow: 0 0 10px 0 rgba($tc-color--black, 0.3);
@@ -158,7 +160,9 @@ $tc-transition-duration--switch: 0.25s;
 $tc-transition-duration--tabs: 0.25s;
 
 // ### Z indexes
-$tc-z-index--toolbar: 1;
-$tc-z-index--app-bar: 2;
-$tc-z-index--navigation-drawer: 3;
-$tc-z-index--dialog: 4;
+$tc-z-index--switch: 1;
+$tc-z-index--toolbar: 2;
+$tc-z-index--app-bar: 3;
+$tc-z-index--select: 4;
+$tc-z-index--navigation-drawer: 5;
+$tc-z-index--dialog: 6;
